[gd_scene load_steps=7 format=3 uid="uid://dot63omjt4icn"]

[ext_resource type="Script" path="res://Scenes/Scripts/Level/Button.gd" id="1_uj5ch"]
[ext_resource type="Texture2D" uid="uid://6ubgp2l1ibks" path="res://Assets/Placeholder/Placeholder.png" id="2_y8n8v"]

[sub_resource type="SpriteFrames" id="SpriteFrames_vwq64"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_y8n8v")
}, {
"duration": 1.0,
"texture": ExtResource("2_y8n8v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m11fj"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80okv"]
size = Vector2(10, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_scf8m"]
size = Vector2(4, 16)

[node name="Button" type="Node2D"]
script = ExtResource("1_uj5ch")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vwq64")

[node name="Push" type="Timer" parent="."]

[node name="Okay" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Okay"]
shape = SubResource("RectangleShape2D_m11fj")

[node name="Good" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Good"]
shape = SubResource("RectangleShape2D_80okv")

[node name="Perfect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perfect"]
shape = SubResource("RectangleShape2D_scf8m")

[connection signal="timeout" from="Push" to="." method="_on_push_timeout"]
[connection signal="area_entered" from="Okay" to="." method="_on_okay_area_entered"]
[connection signal="area_exited" from="Okay" to="." method="_on_okay_area_exited"]
[connection signal="area_entered" from="Good" to="." method="_on_good_area_entered"]
[connection signal="area_exited" from="Good" to="." method="_on_good_area_exited"]
[connection signal="area_entered" from="Perfect" to="." method="_on_perfect_area_entered"]
[connection signal="area_exited" from="Perfect" to="." method="_on_perfect_area_exited"]
